# 最小的cmake版本号
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
# 项目名称
PROJECT(TIME_CALC)

SET(CMAKE_CXX_STANDARD 14)
# 将静态链接库添加上去
SET(CMAKE_EXE_LINKER_FLAGS -static)
# 添加子源文件
ADD_SUBDIRECTORY(core)

# 将当前目录中内容
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(TIME_CALC ${DIR_SRCS})

TARGET_LINK_LIBRARIES(TIME_CALC timer_lib)


